apps/rook-ceph/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
  labels:
    name: rook-ceph
    app: rook-ceph
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
