apps/rook-ceph/base/resources/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-ceph
  namespace: rook-ceph
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-ceph
  hostnames:
    - ceph.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8443
